--- a/catalog/static/css/report.css
+++ b/catalog/static/css/report.css
@@ -131,10 +131,11 @@ body {
 }
 
 hr{
-    width: 1000%;
+    width: 92%;
     position: relative;
     top: 37px;
     z-index: 3;
+    left:8px;
 }
 
 .ui.search.dropdown.selection{
@@ -146,6 +147,7 @@ hr{
 
 #companyname{
     font-size:30px;
+    font-weight:600;
 }
 #topword{
     font-size:35px;
@@ -165,7 +167,7 @@ hr{
 #companyname_typebutton{
     position: relative;
     top: 30px;
-    left:23px;
+    left:25px;
 }
 
 #companyname_typebutton{
