--- a/catalog/static/css/intro.css
+++ b/catalog/static/css/intro.css
@@ -10,8 +10,10 @@
   margin-left: 3px;
   margin-top: 2px;
 }
-
-
+.introjs-tooltiptext{
+  font-size:18px;
+  line-height: 25px;;
+}
 .introjs-tooltip {
     background-color: rgba(000, 0, 0, 0.5);
     color: #fff;
