--- a/catalog/templates/report1.html
+++ b/catalog/templates/report1.html
@@ -58,8 +58,8 @@
             
         </div>
         <div class="row" style="flex-direction: row-reverse;margin-right: 30px;">
-            <div id="userguide">
-                <span id="ug_pic" class="material-symbols-outlined" onclick="intro()">
+            <div id="userguide" onclick="intro()">
+                <span id="ug_pic" class="material-symbols-outlined">
                     support_agent
                 </span>
                 <div id="ug_word">user guide</div>
